--- a/stable/themes/fruity/style.css
+++ b/stable/themes/fruity/style.css
@@ -9,7 +9,7 @@
   the Free Software Foundation; either version 2 of the License, or
   (at your option) any later version.
   ********************************************
-  Coppermine version: 1.3.5
+  Coppermine version: 1.4.2
   $Source$
   $Revision$
   $Author$
@@ -31,16 +31,8 @@
 /* and replace on the hex color...             */
 
 body {
-scrollbar-face-color: #FFA600;
-scrollbar-highlight-color: #FFA600;
-scrollbar-shadow-color: #6BBE10;
-scrollbar-3dlight-color: #FFFF00;
-scrollbar-arrow-color:  #FFFF00;
-scrollbar-track-color: #FFFFFF;
-scrollbar-darkshadow-color: #6BBE10;
 background-color:#FFFFFF;
 margin-top:0px;
-margin-bottom:100px;
 margin-left:0px;
 margin-right:0px;
 padding:0px;
@@ -243,9 +235,31 @@ a:hover.yebg {
         padding-left: 10px;
 }
 
+.catrow {
+        background: #F7F37B ;
+        padding-top: 3px;
+        padding-right: 10px;
+        padding-bottom: 3px;
+        padding-left: 10px;
+}
+
+.catrow_noalb {
+        background: #F7F37B ;
+        color : #000000;
+        padding-top: 3px;
+        padding-right: 10px;
+        padding-bottom: 3px;
+        padding-left: 10px;
+}
+
 .album_stat {
         font-size : 10px;
         margin: 5px 0px;
+}
+
+.thumb_filename {
+        font-size: 80%;
+        display: block;
 }
 
 .thumb_title {
@@ -409,6 +423,10 @@ a:hover.yebg {
         background: #FFA600;
 }
 
+td #admin_menu_anim {
+        background-image : url(images/button_bg_anim.gif);
+}
+
 .comment_date{
         color : #5F5F5F;
         font-size : 10px;
@@ -427,6 +445,14 @@ a:hover.yebg {
         background-color: #FFFFFF;
         margin-top: 30px;
         margin-bottom: 30px;
+}
+
+.display_media {
+        background: #F7F37B ;
+        padding-top: 3px;
+        padding-right: 10px;
+        padding-bottom: 3px;
+        padding-left: 10px;
 }
 
 .thumbnails {
@@ -495,6 +521,7 @@ a:hover.yebg {
         margin-top: 0px;
         margin-bottom: 0px;
         width:120px;
+        white-space:nowrap;
 }
 
 .topmenu a {
@@ -506,7 +533,7 @@ a:hover.yebg {
     border-left-width: 0px;
     background: #6BBE10;
     background-image : url(images/button_bg.gif);
-    background-position: middle;
+    background-position: center;
     border-bottom-width: 0px;
     margin: 0px 0px 2px;
     color: #625b55;
@@ -564,7 +591,6 @@ a:hover.yebg {
 .clickable_option {
         color: #6BBE10;
         font-weight: bold;
-        cursor : hand;
 }
 
 .listbox_lang {
@@ -574,7 +600,32 @@ a:hover.yebg {
         font-size: 80%;
         font-family: Arial, Helvetica, sans-serif;
         vertical-align : middle;
+        margin-top: 5px;
 }
+
+#SELECT_LISTS {
+        text-align:center;
+}
+
+#vanity {
+        margin-top: 10px;
+}
+
+#vanity a {
+        display:block;
+        width:57px;
+        height:20px;
+        margin: 3px 20px;
+}
+#vanity img {border:0}
+#v_php {float:left;background-image:url(../../images/powered-php.gif);}
+#v_php:hover {background-image:url(../../images/h_powered-php.gif);}
+#v_mysql {float:left;background-image:url(../../images/powered-mysql.gif);}
+#v_mysql:hover  {background-image:url(../../images/h_powered-mysql.gif);}
+#v_xhtml {float:right;background-image:url(../../images/valid-xhtml10.gif);}
+#v_xhtml:hover {background-image:url(../../images/h_valid-xhtml10.gif);}
+#v_css {float:right;background-image:url(../../images/valid-css.gif);}
+#v_css:hover{background-image:url(../../images/h_valid-css.gif);}
 
 /* Colors used:                                */
 /* --------------------------------------------*/
@@ -588,4 +639,4 @@ a:hover.yebg {
 /* #5F5F5F = RGB  95, 95, 95 = (dark grey)     */
 /* #E7F38C = RGB 239,243,140 = (light green)   */
 /* if you don't like a color, just do a search */
-/* and replace on the hex color...
+/* and replace on the hex color...             */
