--- a/stable/themes/hardwired/style.css
+++ b/stable/themes/hardwired/style.css
@@ -9,28 +9,56 @@
   the Free Software Foundation; either version 2 of the License, or
   (at your option) any later version.
   ********************************************
-  Coppermine version: 1.3.5
+  Coppermine version: 1.4.2
   $Source$
   $Revision$
   $Author$
   $Date$
 **********************************************/
 
+/* Colors used in this style sheet:
+Hex 000000 = RBG   0,   0,   0 = black
+Hex 005D8C = RBG   0,  93, 140 = dark blue
+Hex 333333 = RBG  51,  51,  51 = black
+Hex 394048 = RBG  57,  64,  72 = black
+Hex 394049 = RBG  57,  64,  73 = black
+Hex 404750 = RBG  64,  71,  80 = dark grey
+Hex 414852 = RBG  65,  72,  82 = dark grey
+Hex 444444 = RBG  68,  68,  68 = dark grey
+Hex 474F5A = RBG  71,  79,  90 = dark grey
+Hex 49525D = RBG  73,   82, 93 = dark grey
+Hex 4F5864 = RBG  79,  88, 100 = dark grey
+Hex 4F5964 = RBG  79,  89, 100 = dark grey
+Hex 515B67 = RBG  81,  91, 103 = dark grey
+Hex 555555 = RBG  85,  85,  85 = medium grey
+Hex 56606D = RBG  86,  96, 109 = medium grey
+Hex 5B5B5B = RBG  91,  91,  91 = medium grey
+Hex 5D6674 = RBG  93, 102, 116 = medium grey
+Hex 5D6876 = RBG  93, 104, 118 = medium grey
+Hex 616C7A = RBG  97, 108, 122 = medium grey
+Hex 616D7B = RBG  97, 108, 123 = medium grey
+Hex 6A7786 = RBG 106, 119, 134 = medium grey
+Hex 777777 = RBG 119, 119, 119 = medium grey
+Hex 8090A3 = RBG 128, 144, 163 = steel grey
+Hex 949494 = RBG 148, 148, 148 = medium grey
+Hex AEAEAE = RBG 174, 174, 174 = light grey
+Hex BDBEBD = RBG 189, 190, 189 = light grey
+Hex C7C7C7 = RBG 199, 199, 199 = light grey
+Hex CCCCCC = RBG 204, 204, 204 = light grey
+Hex DFDFDF = RBG 223, 223, 223 = light grey
+Hex EAEAEA = RBG 234, 234, 234 = dark white
+Hex EFEFEF = RBG 239, 239, 239 = dark white
+Hex F2F8FF = RBG 242, 248, 255 = dark white
+Hex FFFFFF = RBG 255, 255, 255 = white
+*/
+
 body {
         font-family : Verdana, Arial, Helvetica, sans-serif;
         font-size: 10px;
         color : #AEAEAE;
         margin: 0px;
-        scrollbar-face-color: #444444;
-        scrollbar-highlight-color: #444444;
-        scrollbar-shadow-color: #333333;
-        scrollbar-3dlight-color: #555555;
-        scrollbar-arrow-color:  #777777;
-        scrollbar-track-color: #333333;
-        scrollbar-darkshadow-color: #333333;
-        margin:0px;
         background-color:#000000;
-        background-image:url(images/hardwired_bak.gif);
+        background-image:url(images/hardwired.gif);
         background-repeat:repeat;
         }
 
@@ -164,7 +192,7 @@ bblink a:hover {
 
 .tableh1 {
         background : #4F5964 ;
-        color : #6A7786;
+        color : #FFFFFF;
         padding-top: 3px;
         padding-right: 10px;
         padding-bottom: 3px;
@@ -222,9 +250,31 @@ bblink a:hover {
         padding-left: 10px;
 }
 
+.catrow_noalb {
+        background: #616C7A ;
+        color : #C7C7C7;
+        padding-top: 3px;
+        padding-right: 10px;
+        padding-bottom: 3px;
+        padding-left: 10px;
+}
+
+.catrow {
+        background: #56606D ;
+        padding-top: 3px;
+        padding-right: 10px;
+        padding-bottom: 3px;
+        padding-left: 10px;
+}
+
 .album_stat {
         font-size : 85%;
         margin: 5px 0px;
+}
+
+.thumb_filename {
+        font-size: 100%;
+        display: block;
 }
 
 .thumb_title {
@@ -368,7 +418,7 @@ bblink a:hover {
         font-size: 85%;
         border: 1px solid #404750;
         background-color : #5D6674;
-        color:#cccccc;
+        color:#CCCCCC;
         margin-top: 0px;
         margin-bottom: 0px;
         text-align: center;
@@ -390,6 +440,10 @@ bblink a:hover {
         text-decoration: underline;
 }
 
+td #admin_menu_anim {
+        background-image : url(images/button_bg_anim.gif);
+}
+
 .comment_date{
         color : #949494;
         font-size : 90%;
@@ -408,6 +462,14 @@ bblink a:hover {
         background-color: #5B5B5B;
         margin-top: 30px;
         margin-bottom: 30px;
+}
+
+.display_media {
+        background: #56606D ;
+        padding-top: 3px;
+        padding-right: 10px;
+        padding-bottom: 3px;
+        padding-left: 10px;
 }
 
 .thumbnails {
@@ -471,6 +533,8 @@ bblink a:hover {
 
 .topmenu {
         font-size : 100%;
+        margin-top:5px;
+        margin-right:5px;
 }
 
 .topmenu a {
@@ -514,12 +578,26 @@ bblink a:hover {
         padding-bottom: 6px;
         padding-left: 10px;
         border-top : 1px solid #394049;
+        white-space: normal;
+}
+
+.gallery
+{
+    background-color: #49525D;
 }
 
 .gal_name
 {
         color:#4C5157;
+        white-space:nowrap;
         font-size:20px;
+}
+
+.gal_description
+{
+        color:#4C5157;
+        white-space:nowrap;
+        font-size:10px;
 }
 
 .debug_text {
@@ -531,7 +609,7 @@ bblink a:hover {
 
 .clickable_option {
         border-bottom : 1px dotted #444444;
-        cursor : hand;
+        cursor : default;
 }
 
 .listbox_lang {
@@ -542,3 +620,41 @@ bblink a:hover {
         font-family: Arial, Helvetica, sans-serif;
         vertical-align : middle;
 }
+
+#vanity a {
+        display:block;
+        width:57px;
+        height:20px;
+        margin: 3px 20px;
+}
+#vanity img {border:0}
+#v_php {float:left;background-image:url(../../images/powered-php.gif);}
+#v_php:hover {background-image:url(../../images/h_powered-php.gif);}
+#v_mysql {float:left;background-image:url(../../images/powered-mysql.gif);}
+#v_mysql:hover  {background-image:url(../../images/h_powered-mysql.gif);}
+#v_xhtml {float:right;background-image:url(../../images/valid-xhtml10.gif);}
+#v_xhtml:hover {background-image:url(../../images/h_valid-xhtml10.gif);}
+#v_css {float:right;background-image:url(../../images/valid-css.gif);}
+#v_css:hover{background-image:url(../../images/h_valid-css.gif);}
+
+.bottom-left {background-image:url(images/bottom-left.gif);}
+.bottom-middle {background-image:url(images/bottom-middle.gif);}
+.bottom-right {background-image:url(images/bottom-right.gif);}
+.far-left {background-image:url(images/far-left.gif);}
+.far-right {background-image:url(images/far-right.gif);}
+.hardwired {background-image:url(images/hardwired.gif);}
+.left-banner {
+    background-image:url(images/left-banner.gif);
+    height:46px;
+    background-repeat:no-repeat;
+    text-align:right;
+    padding-right:16px;
+    padding-top:16px;
+}
+.middle-left {background-image:url(images/middle-left.gif);}
+.middle-right {background-image:url(images/middle-right.gif);}
+.right-banner {
+    background-image:url(images/right-banner.gif);
+}
+.top-left {background-image:url(images/top-left.gif);}
+.top-right {background-image:url(images/top-right.gif);}
