--- a/stable/themes/rainy_day/style.css
+++ b/stable/themes/rainy_day/style.css
@@ -9,18 +9,35 @@
   the Free Software Foundation; either version 2 of the License, or
   (at your option) any later version.
   ********************************************
-  Coppermine version: 1.3.5
+  Coppermine version: 1.4.2
   $Source$
   $Revision$
   $Author$
   $Date$
 **********************************************/
 
+/* Colors used:                                */
+/* --------------------------------------------*/
+/* #000000 = RBG   0,  0,  0 = (black)         */
+/* #66707C = RBG 102,112,124 = (dark grey)     */
+/* #5F5F5F = RBG  95, 95, 95 = (dark grey)     */
+/* #BDBEBD = RBG 189,190,189 = (light grey)    */
+/* #A3AAB4 = RBG 163,170,180 = (light grey)    */
+/* #C2C9D3 = RBG 194,201,211 = (light grey)    */
+/* #DEDEDE = RBG 222,222,222 = (dark white)    */
+/* #EFEFEF = RBG 239,239,239 = (dark white)    */
+/* #FFFFFF = RBG 255,255,255 = (white)         */
+/* #758698 = RBG 117,134,152 = (light blue)    */
+/* #005D8C = RBG   0, 93,140 = (medium blue)   */
+/* #0033CC = RBG   0, 51,204 = (medium blue)   */
+/* if you don't like a color, just do a search */
+/* and replace on the hex color...             */
+
 body {
-        font-family : Verdana, Arial, Helvetica, sans-serif;
+        font-family: Verdana, Arial, Helvetica, sans-serif;
         font-size: 12px;
-        background : #758698 ;
-        color : Black;
+        background: #758698 ;
+        color: Black;
         margin: 0px;
 }
 
@@ -32,17 +49,17 @@ h1{
         font-size: 32px;
         font-family: "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
         text-decoration: none;
-        color : White;
+        color: #FFFFFF;
         margin: 2px;
-        font-style : italic;
+        font-style: italic;
 }
 
 h2 {
         font-family: Arial, Helvetica, sans-serif;
         font-size: 18px;
         margin: 0px;
-        color : White;
-        font-style : italic;
+        color: #FFFFFF;
+        font-style: italic;
 }
 
 h3 {
@@ -78,31 +95,31 @@ li {
         border: 1px solid #A3AAB4;
         padding-right: 3px;
         padding-left: 3px;
-        background-color : #DEDEDE;
+        background-color: #DEDEDE;
 }
 
 .listbox {
         font-family: Verdana, Arial, Arial, Helvetica, sans-serif;
-        background-color : #DEDEDE;
+        background-color: #DEDEDE;
         font-size: 100%;
         border: 1px solid #A3AAB4;
-        vertical-align : middle;
+        vertical-align: middle;
 }
 
 .button {
         font-family: Arial, Helvetica, sans-serif;
         font-size: 100%;
         border: 1px solid #005D8C;
-        background-image : url(images/button_bg.gif);
-        background-position : bottom;
+        background-image: url(images/button_bg.gif);
+        background-position: bottom;
 }
 
 .comment_button {
         font-family: Arial, Helvetica, sans-serif;
         font-size: 100%;
         border: 1px solid #005D8C;
-        background-image : url(images/button_bg.gif);
-        background-position : bottom;
+        background-image: url(images/button_bg.gif);
+        background-position: bottom;
         padding-left: 3px;
         padding-right: 3px;
 }
@@ -110,13 +127,13 @@ li {
 .radio {
         font-family: Verdana, Arial, Helvetica, sans-serif;
         font-size: 100%;
-        vertical-align : middle;
+        vertical-align: middle;
 }
 
 .checkbox {
         font-family: Verdana, Arial, Helvetica, sans-serif;
         font-size: 100%;
-        vertical-align : middle;
+        vertical-align: middle;
 }
 
 a {
@@ -141,14 +158,15 @@ bblink a:hover {
 
 .maintable {
         border: 1px solid #DEDEDE;
-        background-color: #292E34;
+/*        background-color: #BDBEBD; */
+        background-color:#C2C9D3;
         margin-top: 1px;
         margin-bottom: 1px;
 }
 
 .tableh1 {
-        background : #66707C ;
-        color : #FFFFFF;
+        background: #66707C ;
+        color: #FFFFFF;
         padding-top: 3px;
         padding-right: 10px;
         padding-bottom: 3px;
@@ -156,8 +174,8 @@ bblink a:hover {
 }
 
 .tableh1_compact {
-        background : #66707C ;
-        color : #FFFFFF;
+        background: #66707C ;
+        color: #FFFFFF;
         padding-top: 2px;
         padding-right: 5px;
         padding-bottom: 2px;
@@ -166,7 +184,7 @@ bblink a:hover {
 
 .tableh2 {
         background: #A3AAB4 ;
-        color : #000000;
+        color: #000000;
         padding-top: 3px;
         padding-right: 10px;
         padding-bottom: 3px;
@@ -175,7 +193,7 @@ bblink a:hover {
 
 .tableh2_compact {
         background: #A3AAB4 ;
-        color : #000000;
+        color: #000000;
         padding-top: 2px;
         padding-right: 5px;
         padding-bottom: 2px;
@@ -206,22 +224,44 @@ bblink a:hover {
         padding-left: 10px;
 }
 
+.catrow_noalb {
+        background: #A3AAB4 ;
+        color: #000000;
+        padding-top: 3px;
+        padding-right: 10px;
+        padding-bottom: 3px;
+        padding-left: 10px;
+}
+
+.catrow {
+        background: #C2C9D3 ;
+        padding-top: 3px;
+        padding-right: 10px;
+        padding-bottom: 3px;
+        padding-left: 10px;
+}
+
 .album_stat {
-        font-size : 85%;
+        font-size: 85%;
         margin: 5px 0px;
 }
 
+.thumb_filename {
+        font-size: 80%;
+        display: block;
+}
+
 .thumb_title {
-        font-weight : bold;
+        font-weight: bold;
         font-size: 80%;
         padding: 2px;
-        display : block;
+        display: block;
 }
 
 .thumb_caption {
         font-size: 80%;
         padding: 1px;
-        display : block;
+        display: block;
 }
 
 .thumb_caption a {
@@ -233,8 +273,8 @@ bblink a:hover {
         font-weight: normal;
         font-size: 80%;
         padding: 2px;
-        font-style : italic;
-        display : block;
+        font-style: italic;
+        display: block;
 }
 
 .user_thumb_infobox {
@@ -243,18 +283,18 @@ bblink a:hover {
 }
 
 .user_thumb_infobox th {
-        font-weight : bold;
+        font-weight: bold;
         font-size: 100%;
         margin-top: 1px;
         margin-bottom: 1px;
-        text-align : center;
+        text-align: center;
 }
 
 .user_thumb_infobox td {
         font-size: 85%;
         margin-top: 1px;
         margin-bottom: 1px;
-        text-align : center;
+        text-align: center;
 }
 
 .user_thumb_infobox a {
@@ -268,16 +308,16 @@ bblink a:hover {
 }
 
 .sortorder_cell {
-        background : #66707C ;
-        color : #FFFFFF;
+        background: #66707C ;
+        color: #FFFFFF;
         padding: 0px;
         margin: 0px;
 }
 
 .sortorder_options {
         font-family: Verdana, Arial, Helvetica, sans-serif;
-        background : #66707C ;
-        color : #FFFFFF;
+        background: #66707C ;
+        color: #FFFFFF;
         padding: 0px;
         margin: 0px;
         font-weight: normal;
@@ -290,7 +330,7 @@ bblink a:hover {
         color: #FFFFFF;
         font-size: 100%;
         font-weight: bold;
-        background : #66707C ;
+        background: #66707C ;
         border-style: none;
 }
 
@@ -313,7 +353,7 @@ bblink a:hover {
 }
 
 .navmenu a:hover {
-        background : #C2C9D3 ;
+        background: #C2C9D3 ;
         text-decoration: none;
         color:         #000000;
 }
@@ -322,8 +362,8 @@ bblink a:hover {
         font-family: Arial, Helvetica, sans-serif;
         font-size: 85%;
         border: 1px solid #005D8C;
-        background-image : url(images/button_bg.gif);
-        background-position : bottom;
+        background-image: url(images/button_bg.gif);
+        background-position: bottom;
         color: #000000;
         font-weight: bold;
         margin-top: 0px;
@@ -352,8 +392,8 @@ bblink a:hover {
         font-family: Arial, Helvetica, sans-serif;
         font-size: 85%;
         border: 1px solid #005D8C;
-        background-image : url(images/button_bg.gif);
-        background-position : bottom;
+        background-image: url(images/button_bg.gif);
+        background-position: bottom;
         background-repeat: repeat-x;
         background-color: #FFFFFF;
         color: #000000;
@@ -378,10 +418,13 @@ bblink a:hover {
         text-decoration: underline;
 }
 
+td #admin_menu_anim {
+        background-image: url(images/button_bg_anim.gif);
+}
 .comment_date{
-        color : #5F5F5F;
-        font-size : 90%;
-        vertical-align : middle;
+        color: #5F5F5F;
+        font-size: 90%;
+        vertical-align: middle;
 }
 
 .image {
@@ -398,6 +441,13 @@ bblink a:hover {
         margin-bottom: 30px;
 }
 
+.display_media {
+        background: #C2C9D3 ;
+        padding-top: 3px;
+        padding-right: 10px;
+        padding-bottom: 3px;
+        padding-left: 10px;
+}
 
 .thumbnails {
         background: #C2C9D3 ;
@@ -406,16 +456,16 @@ bblink a:hover {
 
 .footer {
         font-size: 9px;
-        color: #FFFFFF;
+        color: #292e34;
 }
 
 .footer a {
         text-decoration: none;
-        color: #FFFFFF;
+        color: #758698;
 }
 
 .footer a:hover {
-        color: #FFFFFF;
+        color: black;
         text-decoration: underline;
 }
 
@@ -459,41 +509,41 @@ bblink a:hover {
 }
 
 .topmenu {
-        font-size : 100%;
+        font-size: 100%;
 }
 
 .topmenu a {
-        color : #FFFFFF;
-        text-decoration : none;
+        color: #FFFFFF;
+        text-decoration: none;
 }
 
 .topmenu a:hover  {
-        color : #FFFFFF;
-        text-decoration : underline;
+        color: #FFFFFF;
+        text-decoration: underline;
 }
 
 .topmenu td  {
         white-space: nowrap;
-        font-weight : bold;
+        font-weight: bold;
 }
 
 
 .img_caption_table {
         border: none;
         background-color: #FFFFFF;
-        width : 100%;
-        margin : 0px;
+        width: 100%;
+        margin: 0px;
 }
 
 .img_caption_table th {
         background: #A3AAB4 ;
-        font-size : 100%;
-        color : #000000;
+        font-size: 100%;
+        color: #000000;
         padding-top: 4px;
         padding-right: 10px;
         padding-bottom: 4px;
         padding-left: 10px;
-        border-top : 1px solid #FFFFFF;
+        border-top: 1px solid #FFFFFF;
 }
 
 .img_caption_table td {
@@ -502,19 +552,19 @@ bblink a:hover {
         padding-right: 10px;
         padding-bottom: 6px;
         padding-left: 10px;
-        border-top : 1px solid #FFFFFF;
+        border-top: 1px solid #FFFFFF;
+        white-space: normal;
 }
 
 .debug_text {
         border: #BDBEBD;
         background-color: #EFEFEF;
-        width : 100%;
-        margin : 0px;
+        width: 100%;
+        margin: 0px;
 }
 
 .clickable_option {
-        border-bottom : 1px dotted #758698;
-        cursor : hand;
+        cursor: default;
 }
 
 .listbox_lang {
@@ -523,5 +573,21 @@ bblink a:hover {
         border: 1px solid #758698;
         font-size: 80%;
         font-family: Arial, Helvetica, sans-serif;
-        vertical-align : middle;
+        vertical-align: middle;
 }
+
+#vanity a {
+        display:block;
+        width:57px;
+        height:20px;
+        margin: 3px 20px;
+}
+#vanity img {border:0}
+#v_php {float:left;background-image:url(../../images/powered-php.gif);}
+#v_php:hover {background-image:url(../../images/h_powered-php.gif);}
+#v_mysql {float:left;background-image:url(../../images/powered-mysql.gif);}
+#v_mysql:hover  {background-image:url(../../images/h_powered-mysql.gif);}
+#v_xhtml {float:right;background-image:url(../../images/valid-xhtml10.gif);}
+#v_xhtml:hover {background-image:url(../../images/h_valid-xhtml10.gif);}
+#v_css {float:right;background-image:url(../../images/valid-css.gif);}
+#v_css:hover{background-image:url(../../images/h_valid-css.gif);}
