--- a/stable/themes/water_drop/style.css
+++ b/stable/themes/water_drop/style.css
@@ -9,16 +9,34 @@
   the Free Software Foundation; either version 2 of the License, or
   (at your option) any later version.
   ********************************************
-  Coppermine version: 1.3.5
+  Coppermine version: 1.4.2
   $Source$
   $Revision$
   $Author$
   $Date$
 **********************************************/
 
+/* Colors used:                                */
+/* --------------------------------------------*/
+/* Hex 000000 = RGB   0,  0,  0 = black        */
+/* Hex 5F5F5F = RGB  95, 95, 95 = light black  */
+/* Hex BDBEBD = RGB 189,190,189 = dark grey    */
+/* Hex D1D7DC = RGB 209,215,220 = medium grey  */
+/* Hex CCD7E0 = RGB 204,215,224 = light grey   */
+/* Hex CBD7DE = RGB 203,215,222 = steel grey   */
+/* Hex F2F5F7 = RGB 242,245,247 = dark white   */
+/* Hex EFEFEF = RGB 239,239,239 = dark white   */
+/* Hex FFFFFF = RGB 255,255,255 = white        */
+/* Hex 000666 = RGB   0,  6,102 = dark blue    */
+/* Hex 0033CC = RBG   0, 91,104 = medium blue  */
+/* Hex 718EA5 = RGB 113,142,165 = light blue   */
+/* Hex 8AA5B5 = RGB 138,165,181 = light blue   */
+/* if you don't like a color, just do a search */
+/* and replace on the hex color...             */
+
 body {
         background: url("images/bg.gif");
-        background-color: #f2f5f7;
+        background-color: #F2F5F7;
         font-family: "Trebuchet MS", Verdana, Geneva, Arial, sans-serif;
         font-size : 12px;
         color: #000666;
@@ -35,7 +53,7 @@ h1{
         font-family: "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
         text-decoration: none;
         line-height : 120%;
-        color: #718ea5;
+        color: #718EA5;
         margin: 2px;
 }
 
@@ -94,7 +112,7 @@ li {
 .button {
         font-family: Arial, Helvetica, sans-serif;
         font-size: 100%;
-        border: 1px solid #ccd7e0;
+        border: 1px solid #CCD7E0;
         background-image : url(images/button_bg.gif);
         background-position : bottom;
 }
@@ -102,7 +120,7 @@ li {
 .comment_button {
         font-family: Arial, Helvetica, sans-serif;
         font-size: 100%;
-        border: 1px solid #ccd7e0;
+        border: 1px solid #CCD7E0;
         background-image : url(images/button_bg.gif);
         background-position : bottom;
         padding-left: 3px;
@@ -142,8 +160,8 @@ bblink a:hover {
 }
 
 .maintable {
-        border: 1px solid #ccd7e0;
-        background-color: #FFF;
+        border: 1px solid #CCD7E0;
+        background-color: #FFFFFFF;
         margin-top: 1px;
         margin-bottom: 1px;
 }
@@ -210,9 +228,31 @@ bblink a:hover {
         padding-left: 10px;
 }
 
+.catrow_noalb {
+        background: #CBD7DE ;
+        color : #000000;
+        padding-top: 3px;
+        padding-right: 10px;
+        padding-bottom: 3px;
+        padding-left: 10px;
+}
+
+.catrow {
+        background: #F2F5F7 ;
+        padding-top: 3px;
+        padding-right: 10px;
+        padding-bottom: 3px;
+        padding-left: 10px;
+}
+
 .album_stat {
         font-size : 85%;
         margin: 5px 0px;
+}
+
+.thumb_filename {
+        font-size: 80%;
+        display: block;
 }
 
 .thumb_title {
@@ -328,7 +368,7 @@ bblink a:hover {
 .admin_menu_thumb {
         font-family: Arial, Helvetica, sans-serif;
         font-size: 90%;
-        border: 1px solid #ccd7e0;
+        border: 1px solid #CCD7E0;
         background-image : url(images/button_bg.gif);
         background-position : bottom;
         color: #000000;
@@ -385,6 +425,10 @@ bblink a:hover {
         text-decoration: underline;
 }
 
+td #admin_menu_anim {
+        background-image : url(images/button_bg_anim.gif);
+}
+
 .comment_date{
         color : #5F5F5F;
         font-size: 90%;
@@ -403,6 +447,14 @@ bblink a:hover {
         background-color: #FFFFFF;
         margin-top: 30px;
         margin-bottom: 30px;
+}
+
+.display_media {
+        background: #F2F5F7 ;
+        padding-top: 3px;
+        padding-right: 10px;
+        padding-bottom: 3px;
+        padding-left: 10px;
 }
 
 .thumbnails {
@@ -504,6 +556,7 @@ bblink a:hover {
         padding-bottom: 6px;
         padding-left: 10px;
         border-top : 1px solid #FFFFFF;
+        white-space: normal;
 }
 
 .debug_text {
@@ -514,15 +567,31 @@ bblink a:hover {
 }
 
 .clickable_option {
-        border-bottom : 1px dotted blue;
-        cursor : hand;
+        cursor : default;
+
 }
 
 .listbox_lang {
         color: #000666;
-        background-color: #f2f5f7;
-        border: 1px solid #f2f5f7;
+        background-color: #F2F5F7;
+        border: 1px solid #F2F5F7;
         font-size: 80%;
         font-family: Arial, Helvetica, sans-serif;
         vertical-align : middle;
 }
+
+#vanity a {
+        display:block;
+        width:57px;
+        height:20px;
+        margin: 3px 20px;
+}
+#vanity img {border:0}
+#v_php {float:left;background-image:url(../../images/powered-php.gif);}
+#v_php:hover {background-image:url(../../images/h_powered-php.gif);}
+#v_mysql {float:left;background-image:url(../../images/powered-mysql.gif);}
+#v_mysql:hover  {background-image:url(../../images/h_powered-mysql.gif);}
+#v_xhtml {float:right;background-image:url(../../images/valid-xhtml10.gif);}
+#v_xhtml:hover {background-image:url(../../images/h_valid-xhtml10.gif);}
+#v_css {float:right;background-image:url(../../images/valid-css.gif);}
+#v_css:hover{background-image:url(../../images/h_valid-css.gif);}
